--- a/Transmission-iOS/BPConnectionViewController.xib
+++ b/Transmission-iOS/BPConnectionViewController.xib
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BPConnectionViewController">
             <connections>
+                <outlet property="activityImageView" destination="Bxv-Je-VQA" id="AzQ-52-mDi"/>
                 <outlet property="activityLabel" destination="7" id="48"/>
                 <outlet property="retryButton" destination="49" id="56"/>
-                <outlet property="spinner" destination="4" id="47"/>
                 <outlet property="view" destination="1" id="3"/>
             </connections>
         </placeholder>
@@ -17,24 +17,19 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <activityIndicatorView opaque="NO" contentMode="scaleToFill" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="4">
-                    <rect key="frame" x="81" y="192" width="20" height="20"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                </activityIndicatorView>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="activity text" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7">
-                    <rect key="frame" x="109" y="190" width="102" height="24"/>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="activity text" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7">
+                    <rect key="frame" x="109" y="280" width="102" height="23"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                     <color key="shadowColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <size key="shadowOffset" width="0.0" height="1"/>
+                    <size key="shadowOffset" width="0.0" height="0.0"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="49">
-                    <rect key="frame" x="141" y="222" width="38" height="30"/>
+                    <rect key="frame" x="141" y="311" width="38" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                    <size key="titleShadowOffset" width="0.0" height="1"/>
                     <state key="normal" title="Retry">
                         <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="titleShadowColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -46,22 +41,42 @@
                         <action selector="retryTapped:" destination="-1" eventType="touchUpInside" id="57"/>
                     </connections>
                 </button>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dish.png" translatesAutoresizingMaskIntoConstraints="NO" id="Dp7-Y2-AeS" userLabel="Satellite Dish">
+                    <rect key="frame" x="92" y="86" width="200" height="194"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="200" id="Z2K-81-d43"/>
+                        <constraint firstAttribute="height" constant="194" id="iGl-F7-Qc0"/>
+                    </constraints>
+                </imageView>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Bxv-Je-VQA" userLabel="Activity Indicator">
+                    <rect key="frame" x="92" y="86" width="200" height="194"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="200" id="gxS-va-hPO"/>
+                        <constraint firstAttribute="height" constant="194" id="wHF-xk-sUC"/>
+                    </constraints>
+                </imageView>
             </subviews>
             <color key="backgroundColor" red="0.86245265149999994" green="0.86245265149999994" blue="0.86245265149999994" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="7" secondAttribute="trailing" constant="20" symbolic="YES" id="67"/>
-                <constraint firstItem="4" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="1" secondAttribute="leading" constant="20" symbolic="YES" id="71"/>
-                <constraint firstItem="7" firstAttribute="leading" secondItem="4" secondAttribute="trailing" constant="8" symbolic="YES" id="86"/>
-                <constraint firstItem="4" firstAttribute="centerY" secondItem="7" secondAttribute="centerY" id="87"/>
                 <constraint firstItem="7" firstAttribute="centerX" secondItem="1" secondAttribute="centerX" priority="999" id="140"/>
                 <constraint firstItem="49" firstAttribute="top" secondItem="7" secondAttribute="bottom" constant="8" symbolic="YES" id="142"/>
                 <constraint firstItem="49" firstAttribute="centerX" secondItem="7" secondAttribute="centerX" id="143"/>
-                <constraint firstItem="7" firstAttribute="top" relation="greaterThanOrEqual" secondItem="1" secondAttribute="top" constant="130" id="147"/>
                 <constraint firstItem="7" firstAttribute="top" secondItem="1" secondAttribute="top" priority="999" constant="190" id="149"/>
                 <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="7" secondAttribute="bottom" priority="999" constant="100" id="151"/>
+                <constraint firstItem="Bxv-Je-VQA" firstAttribute="leading" secondItem="Dp7-Y2-AeS" secondAttribute="leading" id="7Jr-tw-FAa"/>
+                <constraint firstItem="Bxv-Je-VQA" firstAttribute="top" secondItem="Dp7-Y2-AeS" secondAttribute="top" id="8K4-Y0-YZB"/>
+                <constraint firstItem="7" firstAttribute="top" secondItem="Dp7-Y2-AeS" secondAttribute="bottom" id="FYn-Ap-hPF"/>
+                <constraint firstItem="Dp7-Y2-AeS" firstAttribute="top" secondItem="1" secondAttribute="top" constant="86" id="L2I-uV-fvq"/>
+                <constraint firstAttribute="centerX" secondItem="7" secondAttribute="centerX" id="xaT-fM-anb"/>
+                <constraint firstItem="Dp7-Y2-AeS" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="92" id="z66-zM-3Kq"/>
             </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
         </view>
     </objects>
+    <resources>
+        <image name="dish.png" width="200" height="194"/>
+    </resources>
 </document>
